asm_tests/other_testfiles/invalid_files/error8.s
.name "MORO"
.comment "MORJESTA!"

12:
add r1, :12, r1
